--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,47 @@
-###########################
-# ignore generated binaries
-# but not the data folder
-###########################
+/bin/*  
+!/bin/data/   
+[Bb]uild/ 
+[Oo]bj/    
+*.o     
+[Dd]ebug*/   
+[Rr]elease*/   
+*.mode*  
+*.app/     
+*.pyc   
+.svn/   
+*.log      
 
-/bin/*
-!/bin/data/
-
-#########
-# general
-#########
-
-[Bb]uild/
-[Oo]bj/
-*.o
-[Dd]ebug*/
-[Rr]elease*/
-*.mode*
-*.app/
-*.pyc
-.svn/
-*.log
-
-
-########################
-# IDE files which should
-# be ignored
-########################
-
-# XCode
-*.pbxuser
-*.perspective
-*.perspectivev3
-*.mode1v3
-*.mode2v3
-# XCode 4
-xcuserdata
+#XCode
+*.pbxuser  
+*.perspective 
+*.perspectivev3  
+*.mode1v3 
+*.mode2v3   
+# XCode 4  
+xcuserdata  
 *.xcworkspace
 
 # Code::Blocks
-*.depend
-*.layout
+*.depend  
+*.layout    
 
 # Visual Studio
-*.sdf
-*.opensdf
-*.suo
-*.pdb
-*.ilk
-*.aps
-ipch/
+*.sdf 
+*.opensdf 
+*.suo  
+*.pdb 
+*.ilk 
+*.aps  
+ipch/  
 
 # Eclipse
-.metadata
-local.properties
+.metadata    
+local.properties 
 .externalToolBuilders
-
-##################
-# operating system
-##################
 
 # Linux
 *~
+
 # KDE
 .directory
 .AppleDouble
@@ -72,11 +53,60 @@ local.properties
 # Thumbnails
 ._*
 
-# Windows
-# Image file caches
+#Windows
+#Image file Caches
 Thumbs.db
 # Folder config file
 Desktop.ini
 
-# Android
+#Android
 .csettings
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Content
+*.mov
+*.mp3
+*.jpg
+*.png
+*.jpeg
+*.gif
+*.avi
+
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
